# camera-roll

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  handoff.md  handoff.md.loaded  index.html  package-lock.json  package.json  refract.html  vite.config.ts
docs/: liquid-glass-acrylic.md
scripts/: build-server.mjs  generate-icons.sh
server/: README.md  app.py  camera-roll-server.spec  faces.py  ffmpeg_bootstrap.py  geocode.py  imaging.py  libraries.py  main.py  models_bootstrap.py  requirements.txt  secondary_index.py
server/tools/: build_geo_data.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: acrylic_capture.rs  commands.rs  lib.rs  main.rs  python_server.rs  window_effects.rs
src/assets/: program-data.json
src/components/: AcrylicMatte.tsx  CameraReflection.tsx  FaceIndexingScreen.tsx  Filmstrip.tsx  FilteredGrid.tsx  FrostedBackground.tsx  GalleryControls.tsx  IndexingPill.tsx  InfoPopover.tsx  LibrarySetup.tsx  LibrarySwitcher.tsx  LiquidGlassConfig.tsx  LoadingLibrary.tsx  MapEmbed.tsx  PeopleModal.tsx  PeoplePopover.tsx  PhotoDetail.tsx  PhotoGrid.tsx  PlayBadge.tsx  Refract.tsx  SettingsButton.tsx  TitleBar.tsx  VideoScrubBar.tsx  ZoomStepper.tsx
src/components/shaders/: reflect.frag  reflect.vert  shadow.frag  shadow.vert
src/lib/: api.ts  photoApi.ts
src/styles/: fonts.css  frosted.css  global.css  photos.css  refract.css
