[package]
name = "photoviewer"
version = "0.1.0"
description = "Tauri shell for PhotoViewer: frosted-glass window + Python sidecar manager."
authors = ["you"]
edition = "2021"
rust-version = "1.77"

# The library crate holds the actual app logic so it can be shared with mobile
# targets later; `main.rs` is just a thin entry point.
[lib]
name = "photoviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client used by the Rust side to talk to the Python FastAPI server.
# rustls-tls avoids a system OpenSSL dependency on Windows.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Native folder picker for choosing the indexes folder and photo libraries. The
# Rust-native path (a thin Win32 wrapper) rather than the Tauri dialog plugin, so
# there is no extra JS package or capability wiring. xdg-portal is left off since
# the only target here is Windows.
rfd = { version = "0.15", default-features = false, features = ["common-controls-v6"] }

[target.'cfg(windows)'.dependencies]
# Native, OS-accelerated window blur (Acrylic). This is the "Rust-native"
# frosted-glass path — the DWM compositor blurs whatever is behind the window,
# so there is no manual pixel blurring (and no OpenCV) involved.
window-vibrancy = "0.5"

# Acrylic backplate capture (see acrylic_capture.rs). Raw Win32 bindings for the
# GDI screen blit + the capture-affinity toggle + the DWM composition flush.
# windows-sys (not windows) keeps this to plain extern fns with no COM machinery.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
] }
# Tiny pure-Rust JPEG encoder for the downsampled frames (no `image` crate).
jpeg-encoder = "0.6"
# The frame is shipped to the webview as a base64 data: URI over a Tauri event.
base64 = "0.22"

[features]
# Enabled by `tauri build --release` tooling; keeps custom protocol assets.
custom-protocol = ["tauri/custom-protocol"]
